test/langtools/tools/javac/valhalla/lworld-values/IllegalByValueTest.out
IllegalByValueTest.java:20:30: compiler.err.mod.not.allowed.here: value
IllegalByValueTest.java:21:25: compiler.err.mod.not.allowed.here: value
IllegalByValueTest.java:22:13: compiler.err.mod.not.allowed.here: value
3 errors
